# wikidata_local_reconciliator

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
data/: andrej.json
src/wd_occupation/: __init__.py
src/wikidata_db_reconciliation/: __init__.py
src/wikidata_human/: __init__.py
src/wikidata_item/: __init__.py
src/wikidata_json_helpers/: __init__.py
src/wikidata_local_parser/: __init__.py
src/wikidata_local_reconciliation/: __init__.py
src/wikidata_local_reconciliator/: __init__.py  helpers.py
src/wikidata_occupation/: __init__.py  defaults.py
tests/: test_wd_occupation.py  test_wikidata_json_helpers.py  test_wikidata_local_reconciliator.py  test_wikidata_occupation.py
