[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wikidata_local_reconciliation"
version = "0.0.1"
authors = [
  { name="Donapieppo", email="donapieppo@yahoo.it" },
]
description = "From a wikidata database dump prepare for human reconciliation"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

